--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -1,1 +1,20 @@
-This is test file
+name: Maven CI/CD
+
+on:
+ push:
+    branches: [ master ]
+
+jobs:
+  build_and_test:
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up JDK 11
+      uses: actions/setup-java@v1
+      with:
+        java-version: 11
+
+    - name: Build project with update Maven version
+      run: mvn clean versions:set -DnewVersion=0.4.0 --file pom.xml
