--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -11,3 +11,5 @@ jobs:
     steps:
     - name: Checkout Github Action
       uses: actions/checkout@v3
+    - name: Build with Maven
+      run: mvn clean versions:set -DnewVersion=0.4.0
