--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -1,17 +1,22 @@
-name: Maven-version
+name: Maven version
+
 on:
   push:
     branches: [ master ]
+  pull_request:
+    branches: [ master ]
+
 jobs:
-  container-test-job:
+  build:
+
     runs-on: ubuntu-latest
-    container:
-      image: maven:3.3-jdk-8
-      #options: --user root
-      volumes:
-        - /home/ubuntu/:/__w/java-hello-world-with-maven/java-hello-world-with-maven
+
     steps:
-    - name: Checkout Github Action
-      uses: actions/checkout@v3
+    - uses: actions/checkout@v2
+    - name: Set up JDK 11
+      uses: actions/setup-java@v2
+      with:
+        java-version: '11'
+        distribution: 'adopt'
     - name: Build with Maven
       run: mvn clean versions:set -DnewVersion=0.4.0
