--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -8,15 +8,20 @@ on:
 
 jobs:
   build:
-
+  
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        maven: [ '3.5.4', '3.6.3', '3.8.6' ]
+
+    name: Maven ${{ matrix.maven }} sample
+
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up JDK 11
-      uses: actions/setup-java@v2
+    - name: Setup Maven Action
+      uses: s4u/setup-maven-action@< version >
       with:
-        java-version: '11'
-        distribution: 'adopt'
-    - name: Build with Maven
-      run: mvn clean versions:set -DnewVersion=0.4.0 --file pom.xml
+        java-version: 8
+        maven-version: ${{ matrix.maven }}
+
+    - run: mvn -V ...
