--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -13,7 +13,7 @@ jobs:
 
     strategy:
       matrix:
-        maven: [ '3.5.4', '3.6.3', '3.8.6' ]
+        maven: [ '0.3.0', '0.4.0' ]
 
     name: Maven ${{ matrix.maven }} sample
 
