--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -1,27 +1,17 @@
-name: Maven version
-
+name: Maven-version
 on:
   push:
     branches: [ master ]
-  pull_request:
-    branches: [ master ]
-
 jobs:
-  build:
-  
+  container-test-job:
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        maven: [ '0.3.0', '0.4.0' ]
-
-    name: Maven ${{ matrix.maven }} sample
-
+    container:
+      image: maven:3.3-jdk-8
+      #options: --user root
+      volumes:
+        - /home/ubuntu/:/__w/java-hello-world-with-maven/java-hello-world-with-maven
     steps:
-    - name: Setup Maven Action
-      uses: s4u/setup-maven-action@< version >
-      with:
-        java-version: 8
-        maven-version: ${{ matrix.maven }}
-
-    - run: mvn -V ...
+    - name: Checkout Github Action
+      uses: actions/checkout@v3
+    - name: Build with Maven
+      run: mvn clean versions:set -DnewVersion=0.4.0 --file pom.xml
