--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -1,17 +1,18 @@
-name: Maven-version
+name: Publish package to the Maven Central Repository
 on:
-  push:
-    branches: [ master ]
+  release:
+    types: [created]
+
 jobs:
-  container-test-job:
+  publish:
     runs-on: ubuntu-latest
-    container:
-      image: maven:3.3-jdk-8
-      #options: --user root
-      volumes:
-        - /home/ubuntu/:/__w/java-hello-world-with-maven/java-hello-world-with-maven
     steps:
-    - name: Checkout Github Action
-      uses: actions/checkout@v3
-    - name: Build with Maven
-      run: mvn clean versions:set -DnewVersion=0.4.0 --file pom.xml
+      - name: Check out Git repository
+        uses: actions/checkout@v2
+      - name: Install Java and Maven
+        uses: actions/setup-java@v1
+        with:
+          java-version: 8
+      - if: github.event.release
+        name: Update version in pom.xml (Release only)
+        run: mvn -B versions:set -DnewVersion=${{ github.event.release.tag_name }} -DgenerateBackupPoms=false
