--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -1,7 +1,7 @@
-name: Publish package to the Maven Central Repository
+name: Maven-version
 on:
-  release:
-    types: [created]
+  push:
+    branches: [ master ]
 
 jobs:
   publish:
