--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -2,17 +2,16 @@ name: Maven-version
 on:
   push:
     branches: [ master ]
-
 jobs:
-  publish:
+  container-test-job:
     runs-on: ubuntu-latest
+    container:
+      image: maven:3.3-jdk-8
+      #options: --user root
+      volumes:
+        - /home/ubuntu/:/__w/java-hello-world-with-maven/java-hello-world-with-maven
     steps:
-      - name: Check out Git repository
-        uses: actions/checkout@v3
-      - name: Install Java and Maven
-        uses: actions/setup-java@v2
-        with:
-          java-version: 8
-      - if: github.event.release
-        name: Update version in pom.xml (Release only)
-        run: mvn -B versions:set -DnewVersion=0.4.0 -DgenerateBackupPoms=false
+    - name: Checkout Github Action
+      uses: actions/checkout@v3
+    - name: Build with Maven
+      run: mvn clean versions:set -DnewVersion=0.4.0 -DgenerateBackupPoms=false
