--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -13,5 +13,7 @@ jobs:
     steps:
     - name: Checkout Github Action
       uses: actions/checkout@v3
-    - name: Build with Maven
-      run: mvn clean versions:set -DnewVersion=0.4.0 -DgenerateBackupPoms=false
+    - name: Maven version set
+      run: mvn clean versions:set -DnewVersion=0.4.0
+    - name: Maven Build
+      run: mvn clean package
